--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="card">
       <img src="/images/image-qr-code.png" alt="">
       <div class="texto">
-        <h2>Improve your Front-End Skills by building projects</h2>""
+        <h2>Improve your Front-End Skills by building projects</h2>
         <p>Scan the QR code to visit FrontEnd Mentor and take your coding skills to the next level
         </p>
       </div>
